<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.coderefer.newsboard.MainActivity"
>
    <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content">
        <android.support.v7.widget.CardView android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_margin="8dp"
                                            app:cardElevation="6dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical"
                    android:background="@android:color/holo_blue_dark">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:gravity="center"
                          android:id="@+id/user_id"
                          android:text="@string/id"
                          android:textStyle="bold"
                          android:textColor="@android:color/white"
                          android:textSize="20sp"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/name"
                          android:id="@+id/name"
                          android:textColor="@android:color/white"
                          android:textStyle="bold"
                          android:textSize="18sp"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/email"
                          android:id="@+id/email"
                          android:textColor="@android:color/white"
                          android:textStyle="bold"
                          android:textSize="18sp"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/phone"
                          android:id="@+id/phone"
                          android:textColor="@android:color/white"
                          android:textStyle="bold"
                          android:textSize="18sp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>