<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.UserDetailsActivity"
>
    <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ScrollView android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/album_id"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:id="@+id/album_id"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/photo_id"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:id="@+id/photo_id"/>
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/image_not_available"
                        android:id="@+id/user_image"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/app_name"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="horizontal"
                        android:layout_margin="15dp"
                        android:background="@android:color/holo_blue_dark">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:id="@+id/user_image_text"
                              android:textColor="@android:color/white"
                              android:layout_marginStart="10dp"
                              android:layout_gravity="center"
                              android:textStyle="bold"
                              android:textSize="18sp"
                    />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>